<resources>
    <string name="app_name">ProyectoFormulario</string>
    <string name="action_settings">Settings</string>
    <string name="ingrese_su_nombre">Ingrese su nombre</string>
    <string name="ingrese_su_edad">Ingrese su edad</string>
    <string name="ingrese_su_pa_s_de_origen">Ingrese su país de origen</string>
    <string name="ingrese_su_profesi_n">Ingrese su profesión</string>
    <string name="ingrese_su_genero">Ingrese su género</string>
</resources>
